添加执行目录说明

--- a/11-html-meta/header.html
+++ b/11-html-meta/header.html
@@ -6,9 +6,9 @@
   <!-- 指定编码，文件类型 -->
   <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
   <!--  -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!--  -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="大玩家">
   <meta name="keywords" content="大玩家，应用下载，红包返现"/>
   <!-- SEO  -->
@@ -17,6 +17,14 @@
   <meta name="renderer" content="webkit">
 </head>
 <body>
+<a href="http://www.w3school.com.cn/tags/tag_meta.asp">w3school meta 标签</a>
+<p>
+  所以对于 header 设置，服务器的优先级还是最高的，http-equiv 只是希望服务器返回指定的header头
+</p>
+
+<p>
+  需要测试
+</p>
 
 </body>
 </html>
