--- a/11-html-meta/header.html
+++ b/11-html-meta/header.html
@@ -7,7 +7,7 @@
   <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
   <!--  -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" >
   <!--  -->
   <meta name="description" content="大玩家">
   <meta name="keywords" content="大玩家，应用下载，红包返现"/>
