--- a/11-html-meta/header.html
+++ b/11-html-meta/header.html
@@ -8,13 +8,19 @@
   <!--  -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" >
-  <!--  -->
+  <!-- 应用描述 -->
   <meta name="description" content="大玩家">
   <meta name="keywords" content="大玩家，应用下载，红包返现"/>
   <!-- SEO  -->
   <meta name="author" content="珀冰科技"/>
   <!-- 360浏览器生效，强制使用webkit内核 -->
   <meta name="renderer" content="webkit">
+
+  <!-- 微信开发时候，强制删除微信缓存，生产环境不可使用 -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+
 </head>
 <body>
 <a href="http://www.w3school.com.cn/tags/tag_meta.asp">w3school meta 标签</a>
