--- a/11-html-meta/header.html
+++ b/11-html-meta/header.html
@@ -5,9 +5,10 @@
   <title>meta header</title>  
   <!-- 指定编码，文件类型 -->
   <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
-  <!--  -->
+  <!-- 指定兼容视图 -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" >
+  
   <!-- 应用描述 -->
   <meta name="description" content="大玩家">
   <meta name="keywords" content="大玩家，应用下载，红包返现"/>
