--- a/24-timer/index.html
+++ b/24-timer/index.html
@@ -7,21 +7,20 @@
   <meta name="author" content="plusmancn@gmail.com">
 
   <style type="text/css">
-    body {
+    html,body {
       margin: 0px;
       height: 100%;
       width: 100%;
     }
 
     .screen {
-      position: fixed;
       width: 100%;
       height: 100%;
       line-height: 4em;
       text-align: center;
       font-size: 100px;
-      animation: scale1dot5 1s infinite alternate;
-      -webkit-animation: scale1dot5 1s infinite alternate;
+      /*animation: scale1dot5 1s infinite alternate;*/
+      /*-webkit-animation: scale1dot5 1s infinite alternate;*/
     }
 
     /**
