--- a/24-timer/index.html
+++ b/24-timer/index.html
@@ -14,11 +14,15 @@
     }
 
     .screen {
-      width: 100%;
-      height: 100%;
-      line-height: 4em;
+      width: 200px;
+      height: 200px;
+      position: relative;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%,-50%);
+      -webkit-transform: translate(-50%,-50%);
       text-align: center;
-      font-size: 100px;
+      font-size: 50px;
       /*animation: scale1dot5 1s infinite alternate;*/
       /*-webkit-animation: scale1dot5 1s infinite alternate;*/
     }
